# libgodot_llgo_demo

./: .gitmodules  README.md  build_libgodot.bat  build_libgodot.sh
samples/cpp_sample/: CMakeLists.txt  README.md  run.bat  run.sh
samples/cpp_sample/src/: main.cpp
samples/cs_sample/: .gitignore  README.md  init_build.bat  init_env.bat  run.bat
samples/cs_sample/Launcher/: .gitignore  Launcher.csproj  Launcher.sln  Program.cs
samples/cs_sample/Launcher/Linker/: Godot.cs
samples/cs_sample/Summator/Extension/: Summator.csproj
samples/cs_sample/Summator/Game/: extension_list.cfg
samples/csharp/: .gitignore  init_build.bat
samples/csharp/Summator/: README.md
samples/csharp/Summator/Extension/: Summator.csproj
samples/csharp/Summator/Game/: .gitignore  summator.gdextension
samples/gd_sample/: .gitignore
samples/gd_sample/mario/: go.mod  main.go
samples/gd_sample/mario/scripts/: block.go  brick.go  coin.go  collectable_coin.go  enemy.go  fall_down_area.go  fireball.go  flag.go  goomba.go  koopa.go  level_manager.go  pipe.go  pipe_connector.go  player.go  points_label.go  (+5 more)
samples/go_sample/: README.md  go.mod  go.sum
samples/go_sample/jump/: Makefile  README.md  go.mod  go.sum  main.go  run.bat
samples/go_sample/mario/: Makefile  README.md  go.mod  main.go
samples/go_sample/project/: icon.png.import  project.godot
samples/go_sample/topdown/: README.md  go.mod  main.go  run.sh
samples/llgo_sample/: README.md  go.mod  run.sh
samples/llgo_sample/config/: godot.pc
samples/llgo_sample/logic/: main.go
samples/llgo_sample/pkg/: libgodot.go
(+28 files in other folders)
